Little guide on popup window

--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Capture Clipboard Link</title>
-    <script src="popup.js"></script>
-</head>
-<body>
-    <h2>Clipboard Link Capturer</h2>
-    <p id="status">Click to capture a link from the clipboard.</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GIF Download Instructions</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 2px;
+        text-align: center;
+        width: 200px;
+      }
+      p {
+        font-size: 14px;
+        margin-bottom: 10px;
+      }
+      div {
+        font-size: 14px;
+        background-color: #f0f0f0;
+        padding: 10px;
+        border-radius: 5px;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>How to Download a GIF</h2>
+    <p>
+      To download a GIF, search for a GIF on Google and move your cursor over
+      the image where "GIF" is written.
+    </p>
+    <div>Right-click on the GIF and select "Download gif."</div>
+    <div>wait a second to download start else try again</div>
+
+  </body>
 </html>
